--- a/style.css
+++ b/style.css
@@ -164,3 +164,40 @@ section {
   vertical-align: middle;
   margin-right: 5px;
 }
+
+.icons {
+  position: absolute;
+  top: 50vh;
+  padding: 0 3%;
+  transform: translateY(-50%);
+}
+
+.icons i {
+  display: block;
+  margin: 26px 0;
+  font-size: 25px;
+  transition: all 0.5s ease;
+}
+
+.icons i:hover {
+  color: rgb(162, 159, 159);
+  transform: translateY(-5px);
+}
+
+.scroll-down {
+  position: absolute;
+  bottom: 6%;
+  right: 3%;
+}
+
+.scroll-down i {
+  display: block;
+  padding: 12px;
+  font-size: 25px;
+  background-color: transparent;
+  transition: all 0.5s ease;
+}
+
+.scroll-down i:hover {
+  transform: translateY(5px);
+}
